# NoteKeeper

./: .gitignore  Makefile.in  README.md  build.sh  configure.ac
res/: mikumiku747-notekeeper.desktop
src/: callbacks.c  callbacks.h  menu.c  menu.h  notekeeper.c  xml.c  xml.h
