# configure.ac - autoconf build script to generate makefile
# Copyright (C) 2015  Daniel Selmes
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT(myconfig, version-0.1)

#Test for a C compiler (probably gcc)
echo "Testing for a C compiler"
AC_PROG_CC
AC_LANG(C)

#Process the Makefile
AC_OUTPUT(Makefile)
